# prompt

./: .env.dev.template  .env.template  .gitignore  .pre-commit-config.yaml  .worktreeinclude  AGENTS.md  AGENTS.override.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  docker-compose.e2e.cache-write.yml  docker-compose.e2e.cache.yml  docker-compose.e2e.yml  docker-compose.extern.prod.yml  docker-compose.minimal.yml  docker-compose.prod.yml  docker-compose.yml  keycloakConfig.json  readme.md  renovate.json
.githooks/: pre-commit
.github/: copilot-instructions.md  pull_request_template.md
api-stress/: .gitignore  README.md  docker-compose.stress.yml  pyproject.toml  requirements.txt  run.sh  stress.env.example
api-stress/catalog/: endpoints.json  merge_catalog.py  partial_assessment.json  partial_certificate.json  partial_core.json  partial_example_server.json  partial_interview.json  partial_self_team_allocation.json  partial_team_allocation.json  partial_template_server.json
api-stress/fuzz/: fuzz.py
api-stress/k6/: exhaustion.js  scenario.js
api-stress/k6/lib/: catalog.js
api-stress/lib/: auth.py  fixtures.py  services.json
api-stress/report/: build_report.py
api-stress/stress/: __init__.py  cli.py
clients/: .dockerignore  Dockerfile  biome.json  eslint.config.mjs  lerna.json  node_modules  package.json  readme.md
deploy/: .env.websec.example  README.md  docker-compose.websec.yml  imprint.html  keycloakConfig.websec.json  privacy.html  render-secrets.sh
docs/: docusaurus.config.js  package.json
e2e/: .dockerignore  (+8 more)
(+2179 files in other folders)
