[project]
name = "prompt-api-stress"
version = "0.1.0"
description = "PROMPT API stress & fuzz suite (k6 load + Python fuzzer)"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1,<1.0",
]

[project.scripts]
# Single orchestrator entry point. `uv run api-stress-test …` and the run.sh
# shim both dispatch here.
api-stress-test = "stress.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Only the orchestrator package is importable; the leaf scripts (catalog/, lib/,
# fuzz/, report/, k6/) are invoked from the source tree by path at runtime.
packages = ["stress"]
